
WithProperties now has the option to pass callable functions as keyword
arguments to substitute in the results of more complex Python code at
evaluation-time.

** Deprecations and Removals

*** The console view previously had an undocumented feature that would strip
leading digits off the category name.  This was undocumented and apparently
non-functional, and has been removed. (#1059)

* Buildbot 0.8.2

** Upgrading

Upgrading to from the previous version will require an 'upgrade-master' run.
However, the schema changes are backward-compatible, so if a downgrade is
required, it will not be difficult.

** New Requirements

The Buildmaster now requires Jinja-2.1 or higher.

Both master and slave now require Twisted-8.0.0.  Although Twisted-2.5.0 may
still work, it is not tested and not supported.

** Command-line options changed

To resolve conflicting command-line options (ticket #972) for sendchange
command the following changes were done:

 * `-m` option now means `--master`
 * `-c` option now means `--comments`
 * `-C` option now means `--category`

Added new `-n|--no-logrotate` flag to create-master command which disables
internal logging and log rotation mechanism in buildbot.tac (ticket #973)

** MasterShellCommand semantics change

The MasterShellCommand now provides the buildmaster's environment to the step
by default; pass env={} to pass a clean environment, instead.

** Log Rotation

The default 'create-master' output now rotates ten twistd.log files, each of
about 10MiB.  This is a change from older versions, which would rotate an
unbounded number of 1MiB files.

** New configuration key, 'changeCacheSize'

This sets the number of changes that buildbot will keep in memory at once.
Users of distributed version control systems should consider setting this to a
high value (e.g. 10,000)

** New libvirt-based Latent Buildslave Support

This extends the support already included for EC2 buildslaves to include any
virtualization platform supported by libvirt.
